# CompressionAlgorithm

./: .gitignore  CMakeLists.txt  analyze.c
docs/: main.btex
docs/examples/: finalhuffman.txt  finalpass.txt  freqs.txt  indexes.txt  indices.txt  savingtable.txt  scaledfreqs.txt  unique.txt
src/: analyze.py  bits.py  decrypt.py  encrypt.py  huffman_algorithm.py  optimize_pass.py
tests/txt/: decrypted  encrypted.bytes  word.pass
tests/txt_huffman_1/: decrypted  encrypted.bytes  word.pass
